--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
       "baseUrl": "./",
       "paths": {
         "@/*": ["./*"]
-      }
+      },
+      "include": ["**/*.ts", "**/*.d.ts", "**/*.tsx", "**/*.vue"],
+      "exclude": ["node_modules", "dist", "build", "public"],
     }
   }
