✨ feat: 打包，调整样式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["@dcloudio/types", "node"],
+    "types": ["@dcloudio/types", "node" ,"./global.d.ts"],
     "baseUrl": "./",
     "paths": {
       "@/*": ["./*"]
