--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name" : "100ls",
     "appid" : "__UNI__92E9902",
     "description" : "应用描述",
-    "versionName" : "1.0.0",
-    "versionCode" : "100",
+    "versionName" : "0.0.2",
+    "versionCode" : 2,
     "transformPx" : false,
     "app-plus" : {
         "usingComponents" : true,
@@ -72,7 +72,10 @@
                     "ifly" : {}
                 }
             },
-            "orientation" : [ "portrait-primary" ]
+            "orientation" : [ "portrait-primary" ],
+            "splashscreen" : {
+                "useOriginalMsgbox" : true
+            }
         },
         "uniStatistics" : {
             "enable" : true
@@ -198,5 +201,6 @@
     "uniStatistics" : {
         "version" : "2",
         "enable" : true
-    }
+    },
+    "locale" : "zh-Hans"
 }
