--- a/.hbuilderx/launch.json
+++ b/.hbuilderx/launch.json
@@ -2,6 +2,9 @@
     "version" : "1.0",
     "configurations" : [
         {
+            "app" : {
+                "launchtype" : "local"
+            },
             "default" : {
                 "launchtype" : "local"
             },
